<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.employee.AddEmployee">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/select_image"
        android:focusable="true" />


    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/full_name"
        android:inputType="textShortMessage"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/mobile_no"
        android:inputType="number|phone"
        android:maxLength="10"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEmployee"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/employee_id"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
        app:srcCompat="@drawable/ic_action_personicon"
        android:contentDescription="@string/select_image" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_action_designation"
        android:contentDescription="@string/icon" />

    <ImageView
        android:id="@+id/imageView4"
        android:contentDescription="@string/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_action_empid" />

    <ImageView
        android:id="@+id/imageView5"
        android:contentDescription="@string/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_action_email" />


    <ImageView
        android:id="@+id/imageView6"
        android:contentDescription="@string/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/etGender"
        app:srcCompat="@drawable/ic_action_phone" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/etDesignation"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/etSociety" />

    <EditText
        android:id="@+id/etDesignation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/designation"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imAddress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_action_address"
        android:contentDescription="@string/icon"/>

    <EditText
        android:id="@+id/etPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="@string/pin_code"
        android:inputType="number"
        android:maxLength="6"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imAddress"
        app:layout_constraintStart_toEndOf="@+id/imAddress"
        app:layout_constraintTop_toTopOf="@+id/imAddress"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/city"
        android:ems="4"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etPin"
        app:layout_constraintStart_toEndOf="@+id/etPin"
        app:layout_constraintTop_toTopOf="@+id/etPin"
        android:autofillHints="City" />

    <EditText
        android:id="@+id/etState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/state"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etCity"
        app:layout_constraintEnd_toEndOf="@+id/etDesignation"
        app:layout_constraintStart_toEndOf="@+id/etCity"
        app:layout_constraintTop_toTopOf="@+id/etCity"
        android:autofillHints="state" />

    <EditText
        android:id="@+id/etSociety"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/society"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etState"
        app:layout_constraintStart_toStartOf="@+id/etPin"
        app:layout_constraintTop_toBottomOf="@+id/etCity"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:hint="@string/age"
        android:inputType="number"
        android:maxLength="3"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etGender"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/etGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/gender"
        android:inputType="textCapCharacters"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/etAge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etFullName"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        android:importantForAutofill="no" />

    <FrameLayout
        android:id="@+id/flAddEmployee"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ProgressBar
            android:id="@+id/pbAddEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>